<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/coordinatorLayout2"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".networks.PickTransportNetworkActivity">

	<androidx.cardview.widget.CardView
		android:id="@+id/cardView2"
		style="@style/NavHeaderCard"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		app:cardCornerRadius="@dimen/cardview_corner_radius"
		app:cardElevation="@dimen/cardview_default_elevation"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="12dp">

			<ImageView
				android:id="@+id/globeView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_globe" />

			<TextView
				android:id="@+id/title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/pick_network_activity"
				android:textAppearance="@style/TextAppearance.AppCompat.Large"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/globeView" />

			<TextView
				android:id="@+id/firstRunTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/pick_network_first_run"
				android:textSize="16sp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/title" />
		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.cardview.widget.CardView>


	<ScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cardView2">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/list"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:layout_behavior="@string/appbar_scrolling_view_behavior"
				tools:listitem="@layout/list_item_transport_continent" />
		</LinearLayout>
	</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
