<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/departureForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="2dp"
        tools:showIn="@layout/fragment_nearbystations">

        <de.grobox.transportr.locations.LocationGpsView
            android:id="@+id/location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/location"/>

    </android.support.v7.widget.CardView>

</LinearLayout>