...
            android:layout_alignParentTop="true"
            tools:text="+10"/>

    </RelativeLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:layout_weight="0.85"
        android:orientation="horizontal"
...
