...
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_action_home"
			tools:ignore="ContentDescription"/>

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/home"
...
