<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
	android:id="@+id/list"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:listitem="@layout/list_item_contributor_group"/>
