...
			app:layout_constraintLeft_toRightOf="@+id/fromTime"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="@+id/fromTime"
			tools:text="From Location"/>

		<org.apmem.tools.layouts.FlowLayout
			android:id="@+id/lines"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginTop="4dp"
			app:layout_constraintLeft_toLeftOf="@+id/fromLocation"
...
